[workspace]
resolver = "2"
members = [
    "tonlib_macros",
    "tonlib",
    "examples",
    "benches"
, "tonlib_core"]

[workspace.package]
description = "A collection of types and utilities for interacting with the TON network"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition = "2021"
authors = ["Sild <silddev@pm.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sild/ton_lib_rs"
rust-version = "1.81"
readme = "README.md"
publish = false


[profile.bench]
debug = true
[profile.release]
debug = true



