[workspace]
resolver = "2"
members = [
    "ton_lib",
    "ton_lib_core",
    "ton_lib_macros",
    "benches",
    "examples",
]

[workspace.package]
description = "A collection of types and utilities for interacting with the TON network"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition = "2021"
authors = ["Sild <silddev@pm.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sild/ton_lib_rs"
rust-version = "1.81"
readme = "README.md"
publish = false

[workspace.dependencies]
# Internal (stonfi-managed)
ton_lib_macros = {path = "./ton_lib_macros", version = "0"}
ton_lib_core = {path = "./ton_lib_core", version = "0"}
ton_lib = {path = "./ton_lib", version = "0"}
tonlib-sys = { version = "2025.7", features = ["with_debug_info"] }


# External

# ton_lib_core
bitstream-io = "4.3"
thiserror = "2.0"
log = "0.4"
crc = "3.3"
hex = "0.4"
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
async-trait = "0.1"
sha2 = "0.10"
once_cell = { version = "1.21", features = ["parking_lot"] }

# ton_lib
moka = { version = "0.12", features = ["async-lock", "future"]}
async-recursion = { version = "1" }
parking_lot = "0.12"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
nacl = "0.5"
ton_liteapi = "0.2"
tokio = "1.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
auto_pool = { version = "0.3", features = ["async"] }
adnl = "2.0"
tokio-tower = "0.6"
tower = { version = "0.5", features = ["util"] }
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
serde-aux = "4.7"
base64-serde = "0.8"
futures-util = "0.3"
libc = "0.2"
tokio-retry = "0.3"
reqwest = "0.12.22"



[profile.bench]
debug = true
[profile.release]
debug = true



