[package]
name = "benches"
version = "0.0.26"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = false

[dependencies]
ton_lib = { path = "../ton_lib", version = "0" }
hex = "0.4"
num-bigint = { version = "0.4" }
anyhow = "1.0"
base64 = "0.22"
criterion = "0.6"

tonlib-core = "0.25.2"


[[bench]]
name = "boc_to_from_bytes"
path = "boc_to_from_bytes.rs"
harness = false

[[bench]]
name = "build_cell"
path = "build_cell.rs"
harness = false

[[bench]]
name = "build_dict_cell"
path = "build_dict_cell.rs"
harness = false