[package]
name = "benches"
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ton_lib = { path = "../ton_lib", version = "0" }
ton_lib_core = { path = "../ton_lib_core", version = "0" }
base64 = "0.22"
criterion = "0.7"

tonlib-core = "0.26"


[[bench]]
name = "boc_to_from_bytes"
path = "boc_to_from_bytes.rs"
harness = false

[[bench]]
name = "build_cell"
path = "build_cell.rs"
harness = false

[[bench]]
name = "build_dict_cell"
path = "build_dict_cell.rs"
harness = false
