[package]
name = "examples"
version = "0.0.26"
# description.workspace = true
# keywords.workspace = true
# edition.workspace = true
# authors.workspace = true
# license.workspace = true
# repository.workspace = true
# rust-version.workspace = true
# readme.workspace = true
publish = false

[dependencies]
ton_lib = { path = "../ton_lib", version = "0" }
hex = "0.4"
num-bigint = { version = "0.4" }
anyhow = "1.0"
tonlib-core = "0.25.2"

[[example]]
name = "cell_perf_boc_from_bytes_tonlib"
path = "cell_perf_boc_from_bytes_tonlib.rs"

[[example]]
name = "cell_perf_boc_from_bytes"
path = "cell_perf_boc_from_bytes.rs"

[[example]]
name = "cell_perf_build_cell_tonlib"
path = "cell_perf_build_cell_tonlib.rs"

[[example]]
name = "cell_perf_build_cell"
path = "cell_perf_build_cell.rs"

[[example]]
name = "types_tlb_build_dict_large"
path = "types_tlb_build_dict_large.rs" 