[package]
name = "examples"
rust-version.workspace = true
edition.workspace = true
publish = false

[features]
tonlibjson = []

[dependencies]
ton_lib = { path = "../ton_lib", version = "0", features=["tonlibjson"] }
ton_lib_core = { path = "../ton_lib_core", version = "0" }

hex = "0.4"
num-bigint = { version = "0.4" }
anyhow = "1.0"
tonlib-core = "0.26"
tokio = {version = "1.46", features =["rt", "macros"]}
log4rs = "1.3"
log = "0.4"


[[example]]
name = "cell_perf_boc_from_bytes_tonlib"
path = "cell_perf_boc_from_bytes_tonlib.rs"

[[example]]
name = "cell_perf_boc_from_bytes"
path = "cell_perf_boc_from_bytes.rs"

[[example]]
name = "cell_perf_build_cell_tonlib"
path = "cell_perf_build_cell_tonlib.rs"

[[example]]
name = "cell_perf_build_cell"
path = "cell_perf_build_cell.rs"

[[example]]
name = "types_tlb_build_dict_large"
path = "types_tlb_build_dict_large.rs"

[[example]]
name = "read_tx_data"
path = "read_tx_data.rs"

[[example]]
name = "ton_transfer"
path = "ton_transfer.rs"

