[package]
name = "ton_lib"
version = "0.0.39"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true


include = [
    "Cargo.toml",
    "src/*",
    "tests/*",
    "resources/*",
]

[features]
default = []
tonlibjson = ["dep:tonlib-sys"]


[dependencies]
# Internal
ton_lib_core.workspace = true
tonlib-sys = { workspace = true, optional = true }


# External
moka.workspace = true
async-recursion.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
log.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
nacl.workspace = true
crc.workspace = true
hex.workspace = true
base64.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
ton_liteapi.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
auto_pool.workspace = true
adnl.workspace = true
tokio-tower.workspace = true
tower.workspace = true
rand.workspace = true
strum.workspace = true
serde-aux.workspace = true
base64-serde.workspace = true
async-trait.workspace = true
futures-util.workspace = true
libc.workspace = true
tokio-retry.workspace = true
sha2.workspace = true
reqwest.workspace = true


[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tokio = { version = "1.43", features = ["rt", "macros"] }
log4rs = "1.3"





