[package]
name = "ton_lib_core"
version = "0.0.8"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true

include = [
    "Cargo.toml",
    "src/*",
    "resources/*",
]

[dependencies]
# Internal
ton_lib_macros.workspace = true

# External
bitstream-io.workspace = true
thiserror.workspace = true
log.workspace = true
crc.workspace = true
hex.workspace = true
base64.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
async-trait.workspace = true
sha2.workspace = true
once_cell.workspace = true

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
