[package]
name = "ton_lib"
version = "0.0.5"
description = "A collection of types and utilities for interacting with the TON network"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
# Internal
ton_lib_proc_macro = { path = "../ton_lib_proc_macro", version = "0" }

bitstream-io = "3.1.0"
thiserror = "2.0"
log = "0.4"
sha2 = {version = "0.10"}
crc = "3.2.1"
hex = "0.4.3"
base64 = "0.22"
num-bigint = { version = "0.4" }
num-traits = { version = "0.2.19" }
ton_liteapi = "0.2.0"
itertools = "0.14"
rand = "0.9" 
tokio = "1.43.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
auto_pool = { version = "0.3.2", features = ["async"] }
adnl = "2.0"
tokio-tower = "0.6.0"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tonlib-core = "0.24.2"
criterion = "0.5"
sha2 = {version = "0.10", features = ["asm"]} # strongly recommend to enable it for your application
hex = "0.4.3"
tokio-macros = "2"
tokio = { version = "1.43", features = ["rt", "macros"] }

[[bench]]
name = "boc_to_from_bytes"
harness = false

[[bench]]
name = "build_cell"
harness = false
