[package]
name = "ton_lib"
version = "0.0.40"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true


include = [
    "Cargo.toml",
    "src/*",
    "tests/*",
    "resources/*",
]

[features]
default = []
tonlibjson = ["dep:tonlib-sys"]


[dependencies]
# Internal
ton_lib_core = { path = "../ton_lib_core", version = "0.0" }
tonlib-sys = { version = "2025.7", features = ["with_debug_info"], optional = true }


# External
moka = { version = "0.12", features = ["async-lock", "future"]}
async-recursion = { version = "1" }
parking_lot = "0.12"
thiserror = "2.0"
log = "0.4"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
nacl = "0.5"
crc = "3.3"
hex = "0.4"
base64 = "0.22"
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
ton_liteapi = "0.2"
tokio = "1.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
auto_pool = { version = "0.3", features = ["async"] }
adnl = "2.0"
tokio-tower = "0.6"
tower = { version = "0.5", features = ["util"] }
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
serde-aux = "4.7"
base64-serde = "0.8"
async-trait = "0.1"
futures-util = "0.3"
libc = "0.2"
tokio-retry = "0.3"
sha2 = "0.10"
reqwest = "0.12.22"


[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tokio = { version = "1.43", features = ["rt", "macros"] }
log4rs = "1.3"





