[package]
name = "ton_lib_core"
version = "0.0.9"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true

include = [
    "Cargo.toml",
    "src/*",
    "resources/*",
]

[dependencies]
# Internal
ton_lib_macros = { path = "../ton_lib_macros", version = "0" }

# External
bitstream-io = "4.3"
thiserror = "2.0"
log = "0.4"
crc = "3.3"
hex = "0.4"
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
async-trait = "0.1"
sha2 = "0.10"
once_cell = { version = "1.21", features = ["parking_lot"] }

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
