[package]
name = "ton_lib_macros"
version = "0.0.13"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1"
deluxe = "0.5.0"
proc-macro2 = "1.0.94"
proc-macro-crate = "3"

[lib]
proc-macro = true

[dev-dependencies]
ton_lib = {path = "../ton_lib", default-features = false}
