[package]
name = "ton_lib_proc_macro"
version = "0.0.4"
description = "proc-macros for ton_lib crate"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1"
deluxe = "0.5.0"
proc-macro2 = "1.0.94"
proc-macro-crate = "3"

[lib]
proc-macro = true
