[package]
name = "ton_lib_core"
version = "0.1.0"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
ton_lib_macros = { path = "../tonlib_macros", version = "0" }

bitstream-io = "4.1"
thiserror = "2.0"
log = "0.4"
crc = "3.2"
hex = "0.4"
base64 = "0.22"
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
serde_json = "1"
async-trait = "0.1"
sha2 = {version = "0.10"}

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
