[package]
name = "auto_pool"
readme = "README.md"
version = "0.2.0"
description = "A simple pool that returns items automatically after it's dropped"
keywords = ["pool", "object-pool", "autoreturn"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[features]
async = ["dep:async-std"]

[dependencies]
parking_lot = "0.12"
async-std = { version = "1.13.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
lockfree-object-pool = "0.1.6"
object-pool = "0.6.0"
anyhow = "1.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
auto_pool = {path = ".", features = ["async"]}

[[bench]]
name = "benchmark"
harness = false
